# advanced_cv

./: .gitignore  CMakeLists_template.txt  LICENSE  README.md
HW02_Philip_Mark/: CMakeLists.txt  Supervised_Segmentation  supervised_segmentation.cpp
HW03_Philip_Mark/: CMakeLists.txt  diver_segmentation  diver_segmentation.cpp  diver_segmentation_old.cpp  testing.cpp
HW05_Philip_Mark/: CMakeLists.txt  stereo_analysis.cpp  stereo_analysis_partA_B.cpp  writeup.odt
HW1/: CMakeLists.txt  HW01_Image_Rotation.cpp  HW01_Steganography.cpp  HW01_VideoDisplay.cpp  testing.cpp  writeup.txt
annotating/: AnnotatingTest  CMakeLists.txt  annotatingTest.cpp
project/: ACV_Project.cpp  ACV_Project_Calibration.cpp  CMakeLists.txt  modules.txt  scratch.cpp
