cmake_minimum_required(VERSION 3.5)

set(PROJECT_NAME diver_segmentation)
set(SOURCE_FILES diver_segmentation.cpp)
project(${PROJECT_NAME})
find_package(OpenCV REQUIRED)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})

#set(PROJECT_NAME testing)
#set(SOURCE_FILES testing.cpp)
#project(${PROJECT_NAME})
#find_package(OpenCV REQUIRED)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
#add_executable(${PROJECT_NAME} ${SOURCE_FILES})
#include_directories(${OpenCV_INCLUDE_DIRS})
#target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})