cmake_minimum_required(VERSION 3.5)

set(PROJECT_NAME HW05_Stereo_Analysis)
set(SOURCE_FILES stereo_analysis.cpp)
project(${PROJECT_NAME})
find_package(OpenCV REQUIRED)
# set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_executable(${PROJECT_NAME} ${SOURCE_FILES})
include_directories(${OpenCV_INCLUDE_DIRS})
target_link_libraries(${PROJECT_NAME} ${OpenCV_LIBS})
